--- a/Roomie/Roomie/Members.storyboard
+++ b/Roomie/Roomie/Members.storyboard
@@ -73,6 +73,11 @@
                                 <action selector="groupsButtonTapped:" destination="zia-Hg-sGu" id="rat-z7-58n"/>
                             </connections>
                         </barButtonItem>
+                        <barButtonItem key="rightBarButtonItem" systemItem="add" id="6IV-vl-VaA">
+                            <connections>
+                                <action selector="addMemberButton:" destination="zia-Hg-sGu" id="WbJ-sE-33F"/>
+                            </connections>
+                        </barButtonItem>
                     </navigationItem>
                     <simulatedTabBarMetrics key="simulatedBottomBarMetrics"/>
                 </collectionViewController>
