--- a/Roomie/Roomie/Settings.storyboard
+++ b/Roomie/Roomie/Settings.storyboard
@@ -92,7 +92,7 @@
                             <constraint firstAttribute="trailing" secondItem="pXm-9s-bgP" secondAttribute="trailing" constant="100" id="YGs-hU-ZeF"/>
                         </constraints>
                     </view>
-                    <tabBarItem key="tabBarItem" title="Settings" image="Icon8Settings" id="k2b-aQ-VFW"/>
+                    <tabBarItem key="tabBarItem" title="Settings" image="iconsSetting" id="k2b-aQ-VFW"/>
                     <navigationItem key="navigationItem" title="Settings" id="Y24-F3-qi3">
                         <barButtonItem key="leftBarButtonItem" title="Groups" id="AGG-LI-XLB">
                             <connections>
@@ -540,8 +540,8 @@ Contributors: Alex Aslett, Kaitlyn Barker, Johnathan Pham</string>
         </scene>
     </scenes>
     <resources>
-        <image name="Icon8Settings" width="25" height="25"/>
         <image name="avatar" width="512" height="512"/>
         <image name="devMountain" width="2000" height="1123"/>
+        <image name="iconsSetting" width="25" height="25"/>
     </resources>
 </document>
