--- a/Roomie/Roomie/Members.storyboard
+++ b/Roomie/Roomie/Members.storyboard
@@ -66,7 +66,7 @@
                             <outlet property="delegate" destination="zia-Hg-sGu" id="bvA-uQ-0Lw"/>
                         </connections>
                     </collectionView>
-                    <tabBarItem key="tabBarItem" title="Members" image="Icon8Group" id="zb6-2I-4ya"/>
+                    <tabBarItem key="tabBarItem" title="Members" image="iconsGroup" id="zb6-2I-4ya"/>
                     <navigationItem key="navigationItem" title="Members" id="WUQ-80-1IF">
                         <barButtonItem key="leftBarButtonItem" title="Groups" id="shQ-YI-TEW">
                             <connections>
@@ -242,7 +242,7 @@
     </scenes>
     <resources>
         <image name="Emailicon" width="512" height="512"/>
-        <image name="Icon8Group" width="25" height="25"/>
+        <image name="iconsGroup" width="25" height="25"/>
         <image name="phone512" width="512" height="512"/>
     </resources>
 </document>
