--- a/Roomie/Roomie/Expense.storyboard
+++ b/Roomie/Roomie/Expense.storyboard
@@ -23,7 +23,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="67" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="cuC-WW-DVP">
-                                <rect key="frame" x="8" y="183" width="304" height="385"/>
+                                <rect key="frame" x="8" y="187" width="304" height="381"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <prototypes>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="oweExpenseCell" rowHeight="67" id="5rA-nZ-un8" customClass="oweExpenseTableViewCell" customModule="Roomie" customModuleProvider="target">
@@ -205,7 +205,7 @@
                                 </connections>
                             </tableView>
                             <segmentedControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="top" segmentControlStyle="plain" selectedSegmentIndex="0" translatesAutoresizingMaskIntoConstraints="NO" id="MLi-yW-IM6">
-                                <rect key="frame" x="110.5" y="128" width="99" height="29"/>
+                                <rect key="frame" x="110.5" y="132" width="99" height="29"/>
                                 <segments>
                                     <segment title="Owe"/>
                                     <segment title="Owed"/>
@@ -215,7 +215,7 @@
                                 </connections>
                             </segmentedControl>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ePv-ld-Wvr">
-                                <rect key="frame" x="72.5" y="98" width="175" height="10"/>
+                                <rect key="frame" x="72.5" y="102" width="175" height="10"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="175" id="MrJ-ge-pia"/>
                                     <constraint firstAttribute="height" constant="10" id="uTu-z3-Ets"/>
@@ -238,7 +238,7 @@
                             <constraint firstItem="ePv-ld-Wvr" firstAttribute="centerX" secondItem="RRg-Qn-Cum" secondAttribute="centerX" id="jai-PZ-0h5"/>
                         </constraints>
                     </view>
-                    <tabBarItem key="tabBarItem" title="Expense" image="Icon8Expense" id="2sK-Ep-pcR"/>
+                    <tabBarItem key="tabBarItem" title="Expense" image="iconsMoney" id="2sK-Ep-pcR"/>
                     <navigationItem key="navigationItem" title="Expenses" id="BX9-eG-idR">
                         <barButtonItem key="leftBarButtonItem" title="Groups" id="SAz-1f-1Ha">
                             <connections>
@@ -580,7 +580,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <segmentedControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="plain" selectedSegmentIndex="0" translatesAutoresizingMaskIntoConstraints="NO" id="LW6-Ma-kYc">
-                                <rect key="frame" x="48.5" y="74" width="223" height="29"/>
+                                <rect key="frame" x="48.5" y="78" width="223" height="29"/>
                                 <segments>
                                     <segment title="You Paid"/>
                                     <segment title="Others Paid You"/>
@@ -590,7 +590,7 @@
                                 </connections>
                             </segmentedControl>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="qfd-iM-xwH">
-                                <rect key="frame" x="0.0" y="124" width="320" height="395"/>
+                                <rect key="frame" x="0.0" y="128" width="320" height="391"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <prototypes>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="none" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="youPaidCell" rowHeight="71" id="oNn-lq-Rh0" customClass="PaidOthersTableViewCell" customModule="Roomie" customModuleProvider="target">
@@ -794,7 +794,7 @@
                     <tabBarItem key="tabBarItem" title="Expenses" id="A98-Oh-UQ5"/>
                     <toolbarItems/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" id="WRZ-79-Hlg">
-                        <rect key="frame" x="0.0" y="20" width="320" height="44"/>
+                        <rect key="frame" x="0.0" y="20" width="320" height="48"/>
                         <autoresizingMask key="autoresizingMask"/>
                     </navigationBar>
                     <nil name="viewControllers"/>
@@ -808,9 +808,9 @@
         </scene>
     </scenes>
     <resources>
-        <image name="Icon8Expense" width="25" height="25"/>
         <image name="complete" width="512" height="512"/>
         <image name="icons8clock" width="25" height="25"/>
+        <image name="iconsMoney" width="25" height="25"/>
     </resources>
     <inferredMetricsTieBreakers>
         <segue reference="QMQ-as-nca"/>
