--- a/Roomie/Roomie/Settings.storyboard
+++ b/Roomie/Roomie/Settings.storyboard
@@ -272,6 +272,7 @@ Contributors: Alex Aslett, Kaitlyn Barker, Johnathan Pham</string>
                         <outlet property="firstNameTextfield" destination="ajj-g0-0qI" id="61S-Rm-Bci"/>
                         <outlet property="lastNameTextfield" destination="nCD-mP-cMQ" id="y4J-kB-Qhe"/>
                         <outlet property="phoneTextfield" destination="2la-PP-gc5" id="mPc-ej-kVD"/>
+                        <outlet property="profileImage" destination="NXd-GF-bPg" id="4dr-9W-Gcx"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="G0p-Dn-NYw" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -483,6 +484,14 @@ Contributors: Alex Aslett, Kaitlyn Barker, Johnathan Pham</string>
                                     <constraint firstAttribute="height" constant="145" id="rBS-QC-0GO"/>
                                 </constraints>
                             </stackView>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="dqf-4c-p6h">
+                                <rect key="frame" x="127" y="193" width="137" height="30"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <state key="normal" title="Select Profile Image"/>
+                                <connections>
+                                    <action selector="selectImageButtonTapped:" destination="Nkn-zH-hZC" eventType="touchUpInside" id="els-C1-G2V"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
@@ -508,6 +517,7 @@ Contributors: Alex Aslett, Kaitlyn Barker, Johnathan Pham</string>
                         <outlet property="firstNameTextfield" destination="Dwm-KZ-1jh" id="uow-UU-2uG"/>
                         <outlet property="lastNameTextfield" destination="wr0-et-zwr" id="FZt-iH-YdG"/>
                         <outlet property="phoneTextfield" destination="bpT-a1-CPQ" id="k8e-dX-bIx"/>
+                        <outlet property="profileImage" destination="1f4-bQ-sPd" id="OJO-YD-CtB"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="beq-c7-oZr" userLabel="First Responder" sceneMemberID="firstResponder"/>
